--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Make gradlew executable
         run: git update-index --chmod=+x gradlew
       - name: Build with Gradle
-        run: ./gradlew createInstaller
+        run: ./gradlew createInstaller --info
       - name: Upload Windows installer
         uses: actions/upload-artifact@v4
         with:
@@ -38,7 +38,7 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build with Gradle
-        run: ./gradlew createInstaller
+        run: ./gradlew createInstaller --info
       - name: Upload Linux installer
         uses: actions/upload-artifact@v4
         with:
@@ -57,7 +57,7 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build with Gradle
-        run: ./gradlew createInstaller
+        run: ./gradlew createInstaller --info
       - name: Upload macOS installer
         uses: actions/upload-artifact@v4
         with:
