--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -10,14 +10,22 @@ jobs:
   package:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        include:
+          - os: windows-latest
+            java-version: '17'
+          - os: ubuntu-latest
+            java-version: '17'
+          - os: macos-latest
+            java-version: '17'
     runs-on: ${{ matrix.os }}
+    
     steps:
       - uses: actions/checkout@v4
+      
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: ${{ matrix.java-version }}
           distribution: 'temurin'
           
       - name: Install Linux dependencies
@@ -33,38 +41,27 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew createInstaller --info
         
-      - name: Upload Windows installer
-        if: runner.os == 'Windows'
+      - name: Upload installer
         uses: actions/upload-artifact@v4
         with:
-          name: windows-installer
-          path: build/jpackage/*.msi
-          
-      - name: Upload Linux installer
-        if: runner.os == 'Linux'
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-installer
-          path: build/jpackage/*.deb
-          
-      - name: Upload macOS installer
-        if: runner.os == 'macOS'
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-installer
-          path: build/jpackage/*.dmg
+          name: ${{ runner.os }}-installer
+          path: |
+            build/jpackage/*.msi
+            build/jpackage/*.deb
+            build/jpackage/*.dmg
 
   create-release:
     needs: package
-    runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
+        
       - name: Create release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            windows-installer/*.msi
-            linux-installer/*.deb
-            macos-installer/*.dmg
+            *-installer/*.msi
+            *-installer/*.deb
+            *-installer/*.dmg
