--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,18 @@ repositories {
 
 ext {
   junitVersion = '5.10.2'
+  javaVersion = System.getenv('GITHUB_ACTIONS') ? 17 : 23
 }
 
-sourceCompatibility = '23'
-targetCompatibility = '23'
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(javaVersion)
+  }
+}
 
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
+  options.release = javaVersion
 }
 
 application {
@@ -77,7 +82,6 @@ jlink {
     }
     if (currentOs.macOsX) {
       installerType = 'dmg'
-      installerOptions += ['--mac-sign']
       installerOptions += ['--icon', "${projectDir}/src/main/resources/fr/expenses/tableau/icon.png"]
     }
   }
