--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -19,7 +19,9 @@ jobs:
       - name: Make gradlew executable
         run: git update-index --chmod=+x gradlew
       - name: Build with Gradle
-        run: ./gradlew createInstaller
+        run: ./gradlew createInstaller --info
+        env:
+          CI: true
       - name: Upload Windows installer
         uses: actions/upload-artifact@v4
         with:
@@ -35,10 +37,16 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+      - name: Install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y fakeroot
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build with Gradle
-        run: ./gradlew createInstaller
+        run: ./gradlew createInstaller --info
+        env:
+          CI: true
       - name: Upload Linux installer
         uses: actions/upload-artifact@v4
         with:
@@ -57,7 +65,9 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build with Gradle
-        run: ./gradlew createInstaller
+        run: ./gradlew createInstaller --info
+        env:
+          CI: true
       - name: Upload macOS installer
         uses: actions/upload-artifact@v4
         with:
